# SGL

./: .gitmodules  CMakeLists.txt
src/: main.cpp
src/Engine/: Engine.hpp
src/Engine/impl/: camera.cpp  framebuffer.cpp  model.cpp  shader.cpp  texture.cpp
src/shaders/postProcessingShaders/: fragmentShader.glsl  vertexShader.glsl
src/shaders/skyboxShaders/: fragmentShader.glsl  vertexShader.glsl
src/shaders/testShaders/: fragmentShader.glsl  vertexShader.glsl
